--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "eslint-plugin-react": "^7.12.0",
     "fs-extra": "^7.0.1",
     "gatsby-remark-static-images": "^1.0.0",
+    "gatsby-plugin-sass-multiple-entries": "^0.1.0",
     "gh-pages": "^1.2.0",
     "html-loader": "^0.5.5",
     "husky": "^1.3.0",
